Removes remaining unnecessary @TestPropertySource(locations = "classpath:application.yml") annotations.